--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.21.2",
+    "cloudinary":"^1.21.0",
     "express-formidable": "^1.2.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^9.0.2",
